--- a/index.html
+++ b/index.html
@@ -279,8 +279,16 @@
 						<div class="row animate-box" data-animate-effect="fadeInUp">
 							<div class="col-sm-4 col-md-4">
 								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="David Ho"></div>
-									<h3>David Ho</h3>
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Andy Guan"></div>
+									<h3>Andy Guan</h3>
+									<span class="position">Co-President</span>
+								</div>
+							</div>
+
+							<div class="col-sm-4 col-md-4">
+								<div class="team-box text-center">
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Jacob Wagner"></div>
+									<h3>Jacob Wagner</h3>
 									<span class="position">Co-President</span>
 								</div>
 							</div>
@@ -289,14 +297,6 @@
 								<div class="team-box text-center">
 									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Kathy Sheng"></div>
 									<h3>Kathy Sheng</h3>
-									<span class="position">Co-President</span>
-								</div>
-							</div>
-
-							<div class="col-sm-4 col-md-4">
-								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Jimmy Lei"></div>
-									<h3>Jimmy Lei</h3>
 									<span class="position">Senior Advisor</span>
 								</div>
 							</div>
@@ -305,38 +305,30 @@
 						<div class="row animate-box" data-animate-effect="fadeInUp">
 							<div class="col-sm-4 col-md-4">
 								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Grant Joe"></div>
-									<h3>Grant Joe</h3>
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Andrew Liu"></div>
+									<h3>Andrew Liu</h3>
+									<span class="position">Treasurer</span>
+								</div>
+							</div>
+
+							<div class="col-sm-4 col-md-4">
+								<div class="team-box text-center">
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Sherry Fan"></div>
+									<h3>Sherry Fan</h3>
 									<span class="position">Public Relations</span>
 								</div>
 							</div>
 
 							<div class="col-sm-4 col-md-4">
 								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Shio Lee"></div>
-									<h3>Shio Lee</h3>
-									<span class="position">Media Chair</span>
-								</div>
-							</div>
-
-							<div class="col-sm-4 col-md-4">
-								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Joseph Deng"></div>
-									<h3>Joseph Deng</h3>
-									<span class="position">Treasurer</span>
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Grant Joe"></div>
+									<h3>Grant Joe</h3>
+									<span class="position">Service Chair</span>
 								</div>
 							</div>
 						</div>
 
 						<div class="row animate-box" data-animate-effect="fadeInUp">
-							<div class="col-sm-4 col-md-4 col-md-offset-2">
-								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Andy Guan"></div>
-									<h3>Andy Guan</h3>
-									<span class="position">Service Chair</span>
-								</div>
-							</div>
-
 							<div class="col-sm-4 col-md-4">
 								<div class="team-box text-center">
 									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Leonard Liu"></div>
@@ -344,12 +336,46 @@
 									<span class="position">Service Chair</span>
 								</div>
 							</div>
+
+							<div class="col-sm-4 col-md-4">
+								<div class="team-box text-center">
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Christine Wan"></div>
+									<h3>Christine Wan</h3>
+									<span class="position">Service Chair</span>
+								</div>
+							</div>
+
+							<div class="col-sm-4 col-md-4">
+								<div class="team-box text-center">
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Sabrina Wang"></div>
+									<h3>Sabrina Wang</h3>
+									<span class="position">Service Chair</span>
+								</div>
+							</div>
+						</div>
+
+						<div class="row animate-box" data-animate-effect="fadeInUp">
+							<div class="col-sm-4 col-md-4 col-md-offset-2">
+								<div class="team-box text-center">
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Ig-Jun Cho"></div>
+									<h3>Ig-Jun Cho</h3>
+									<span class="position">Media Chair</span>
+								</div>
+							</div>
+
+							<div class="col-sm-4 col-md-4">
+								<div class="team-box text-center">
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Elise Ahn"></div>
+									<h3>Elise Ahn</h3>
+									<span class="position">Media Chair</span>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-
+<!--
 		<section id="umdtc-junior-officers" data-section="officers">
 			<div class="container">
 				<div class="row row-pb-md">
@@ -400,7 +426,7 @@
 				</div>
 			</div>
 		</section>
-
+-->
 		<section id="umdtc-service" data-section="services">
 			<div class="container">
 				<div class="row row-pb-md">
