--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		gtag('config', 'UA-109012488-1');
 	</script>
 
+
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>UMD Tzu Ching</title>
@@ -43,6 +44,7 @@
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
 	
+	
 
 
 	<!-- Modernizr JS -->
@@ -71,7 +73,6 @@
 							<li><a href="#" data-nav-section="about">About</a></li>
 							<li><a href="#" data-nav-section="missions">Mission</a></li>
 							<li><a href="#" data-nav-section="team">Board</a></li>
-							<li><a href="#" data-nav-section="officers">Junior Officers</a></li>
 							<li><a href="#" data-nav-section="services">Service</a></li>
 							<li><a href="#" data-nav-section="faq">FAQ</a></li>
 							<li><a href="#" data-nav-section="calendar">Calendar</a></li>
@@ -110,8 +111,7 @@
 				<div class="row">
 					<div class="col-md-12 animate-box" data-animate-effect="fadeIn">
 						<p>
-							UMD Tzu Ching (UMDTC) is a collegiate youth group dedicated to serving our local community with sincere care, kindness, and compassion. Through various service activities both on campus at UMD and in the DC, Maryland, and Virginia areas, we hope to foster
-							a community of gratitude, respect, and love, and inspire others to lead their lives with greater compassion and humility.
+							UMD Tzu Ching (UMDTC) is a collegiate organization dedicated to serving our local community with sincere care, kindness, and compassion. Through various service activities both on campus at UMD and in the DC, Maryland, and Virginia areas, we hope to foster a community of gratitude, respect, and love, and inspire others to lead their lives with greater compassion and humility.
 						</p>
 					</div>
 				</div>
@@ -162,8 +162,7 @@
 								</div>
 								<div class="umdtc-copy">
 									<h3>Charity</h3>
-									<p>Tzu Chi provides food, clothing, shelter, direct financial assistance, and more. Transforming feelings of helplessness and despair into hope and empowerment, and bringing out the good in people through the happiness they discover when helping
-										others is also our goal.</p>
+									<p>Tzu Chi provides food, clothing, shelter, direct financial assistance, and more. Transforming feelings of helplessness and despair into hope and empowerment, and bringing out the good in people through the happiness they discover when helping others is also our goal.</p>
 								</div>
 							</div>
 						</div>
@@ -279,15 +278,15 @@
 						<div class="row animate-box" data-animate-effect="fadeInUp">
 							<div class="col-sm-4 col-md-4">
 								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Andy Guan"></div>
-									<h3>Andy Guan</h3>
+									<div class="user"><img class="img-reponsive" src="images/eboard/1.png" alt="Christine Wan"></div>
+									<h3>Christine Wan</h3>
 									<span class="position">Co-President</span>
 								</div>
 							</div>
 
 							<div class="col-sm-4 col-md-4">
 								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Jacob Wagner"></div>
+									<div class="user"><img class="img-reponsive" src="images/eboard/2.png" alt="Jacob Wagner"></div>
 									<h3>Jacob Wagner</h3>
 									<span class="position">Co-President</span>
 								</div>
@@ -295,60 +294,34 @@
 
 							<div class="col-sm-4 col-md-4">
 								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Kathy Sheng"></div>
-									<h3>Kathy Sheng</h3>
-									<span class="position">Senior Advisor</span>
-								</div>
-							</div>
-						</div>
-
-						<div class="row animate-box" data-animate-effect="fadeInUp">
-							<div class="col-sm-4 col-md-4">
-								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Andrew Liu"></div>
-									<h3>Andrew Liu</h3>
+									<div class="user"><img class="img-reponsive" src="images/eboard/5.png" alt="Katherine Luo"></div>
+									<h3>Katherine Luo</h3>
 									<span class="position">Treasurer</span>
 								</div>
 							</div>
-
-							<div class="col-sm-4 col-md-4">
-								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Sherry Fan"></div>
-									<h3>Sherry Fan</h3>
-									<span class="position">Public Relations</span>
-								</div>
-							</div>
-
-							<div class="col-sm-4 col-md-4">
-								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Grant Joe"></div>
-									<h3>Grant Joe</h3>
-									<span class="position">Service Chair</span>
-								</div>
-							</div>
 						</div>
 
 						<div class="row animate-box" data-animate-effect="fadeInUp">
 							<div class="col-sm-4 col-md-4">
 								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Leonard Liu"></div>
-									<h3>Leonard Liu</h3>
+									<div class="user"><img class="img-reponsive" src="images/eboard/3.png" alt="Jenny Chen"></div>
+									<h3>Jenny Chen</h3>
+									<span class="position">Media Chair</span>
+								</div>
+							</div>
+
+							<div class="col-sm-4 col-md-4">
+								<div class="team-box text-center">
+									<div class="user"><img class="img-reponsive" src="images/eboard/6.png" alt="Julianna Jing"></div>
+									<h3>Julianna Jing</h3>
 									<span class="position">Service Chair</span>
 								</div>
 							</div>
 
 							<div class="col-sm-4 col-md-4">
 								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Christine Wan"></div>
-									<h3>Christine Wan</h3>
-									<span class="position">Service Chair</span>
-								</div>
-							</div>
-
-							<div class="col-sm-4 col-md-4">
-								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Sabrina Wang"></div>
-									<h3>Sabrina Wang</h3>
+									<div class="user"><img class="img-reponsive" src="images/eboard/4.png" alt="Luc Thibodeau"></div>
+									<h3>Luc Thibodeau</h3>
 									<span class="position">Service Chair</span>
 								</div>
 							</div>
@@ -357,20 +330,21 @@
 						<div class="row animate-box" data-animate-effect="fadeInUp">
 							<div class="col-sm-4 col-md-4 col-md-offset-2">
 								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Ig-Jun Cho"></div>
-									<h3>Ig-Jun Cho</h3>
-									<span class="position">Media Chair</span>
+									<div class="user"><img class="img-reponsive" src="images/eboard/8.png" alt="Steph Shao"></div>
+									<h3>Steph Shao</h3>
+									<span class="position">Regional Advisor</span>
 								</div>
 							</div>
 
 							<div class="col-sm-4 col-md-4">
 								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Elise Ahn"></div>
-									<h3>Elise Ahn</h3>
-									<span class="position">Media Chair</span>
+									<div class="user"><img class="img-reponsive" src="images/eboard/7.png" alt="Kathy Sheng"></div>
+									<h3>Kathy Sheng</h3>
+									<span class="position">Chapter Advisor</span>
 								</div>
 							</div>
 						</div>
+
 					</div>
 				</div>
 			</div>
@@ -436,6 +410,49 @@
 					</div>
 				</div>
 
+				<p style="color:red" class="sub"><b>The events below are ongoing during COVID19:</b></p>
+
+				<div class="row animate-box" data-animate-effect="fadeIn">
+				  <div class="col-sm-6 col-md-6 animate-box" data-animate-effect="fadeInLeft">
+				    <div class="thumbnail">
+				      <img src="images/services/virtual-penpal-1.jpg" alt="Virtual Penpal">
+				      <div class="caption">
+				        <h3 class="text-center">Penpal Program</h3>
+				        <p>Make a meaningful connection with the elderly at Sunrise Montgomery Village Nursing home through emails! This event is a great way to socialize and make a new friend, while staying virtual. </p>
+				      </div>
+				    </div>
+				  </div>
+					<div class="col-sm-6 col-md-6 animate-box" data-animate-effect="fadeInRight">
+						<div class="thumbnail">
+							<img src="images/services/virtual-tutoring-1.jpg" alt="Virtual Tutoring">
+							<div class="caption">
+								<h3 class="text-center">Virtual Tutoring</h3>
+								<p> We appreciate your patience as we work hard to start this service event. [TBD] </p>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-6 animate-box" data-animate-effect="fadeInRight">
+						<div class="thumbnail">
+							<img src="images/services/Food-distribution-1.jpg" alt="Food Distribition">
+							<div class="caption">
+								<h3 class="text-center">Food Distribution</h3>
+								<p>Join us in-person to distribute food to families in need in DC. Masks are mandatory.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-6 animate-box" data-animate-effect="fadeInRight">
+						<div class="thumbnail">
+							<img src="images/services/GBMs-1.jpg" alt="GBMs">
+							<div class="caption">
+								<h3 class="text-center">Other Events and Socials</h3>
+								<p>Have fun with us through our virtual GBMs and socials to meet new friends! You can keep up with our events by checking our Calendar or Facebook, and subscribing to our mailing list.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<br><p style="color:red" class="sub"><b>The events below have been cancelled due to COVID19:</b></p>
+
 				<div class="row animate-box" data-animate-effect="fadeIn">
 				  <div class="col-sm-6 col-md-6 animate-box" data-animate-effect="fadeInLeft">
 				    <div class="thumbnail">
@@ -466,16 +483,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-6 col-md-6 animate-box" data-animate-effect="fadeInRight">
-						<div class="thumbnail">
-							<img src="images/services/buzzing-bees-1.jpg" alt="Buzzing Bees">
-							<div class="caption">
-								<h3 class="text-center">Buzzing Bees After School Program</h3>
-								<p>Every week, we visit the students at Paint Branch Elementary School to talk about values they can apply to their everyday lives. Join us this Wednesday as we talk about life values and spend time with the students!</p>
-							</div>
-						</div>
-					</div>
 				</div>
+
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 animate-box" data-animate-effect="fadeInUp">
 						<div class="thumbnail">
@@ -490,16 +499,13 @@
 								<div class="carousel-item"><img src="images/events-carousel/pic8.jpg" alt=""></div>
 								<div class="carousel-item"><img src="images/events-carousel/pic9.jpg" alt=""></div>
 							</div>
-							<div class="caption">
-								<h3 class="text-center">Other Events and Socials</h3>
-								<p>We ocassionally have other fun service and social events such as, environment cleanups, hiking, TC Iron Chef, The Board and Brew socials, and many more! You can keep up with our events by coming to our monthly GBM's, checking our Calendar, Facebook, or subscribing to our mailing list.</p>
-							</div>
 						</div>
 					</div>
 				</div>
 
 			</div>
 		</section>
+
 
 		<section id="umdtc-faq" data-section="faq">
 			<div class="container">
@@ -697,7 +703,7 @@
 				<div class="row copyright">
 					<div class="col-md-12">
 						<p class="pull-left">
-							<small class="block">&copy; 2017 UMD Tzu Ching</small>
+							<small class="block">&copy; 2020 UMD Tzu Ching</small>
 						</p>
 						<p class="pull-right">
 							<ul class="umdtc-social-icons pull-right">
